playing around node

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-
-<script>
-    alert("You are hacked!");
+<script src="script.js">
 </script>
-<h1> Joking! </h1>
-<!--<h2> Working perfectly on incognito too</h2>-->
 </body>
 </html>
