--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-<script src="practice.js">
+<script src="OOP/assignment.js">
 </script>
 </body>
 </html>
