--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Document</title>
 </head>
 <body>
+<h1>Welcome to Stopwatch!</h1>
+<input type="text" name="display" id="display" disabled>
+<br>
+<button name="start">Start</button>
+<button name="stop">Stop</button>
+<button name="reset">Reset</button>
+
 <script src="OOP/assignment.js">
 </script>
 </body>
